--- a/index.html
+++ b/index.html
@@ -883,6 +883,29 @@ END:VCALENDAR`;
       $("role").textContent = `${r.name} — ${r.hint}`;
     });
 
+    <div style="height:14px"></div>
+
+<h3>Алібі та цитата дня 🖤</h3>
+<div class="rolebox">
+  <div class="role" id="alibiText">Натисни “Згенерувати алібі”</div>
+  <button class="btn mini" id="btnAlibi" type="button">🧾 Згенерувати алібі</button>
+
+  <div style="height:14px"></div>
+
+  <div class="role" id="quoteText">Натисни “Цитата дня”</div>
+  <button class="btn mini" id="btnQuote" type="button">🖤 Цитата дня</button>
+</div>
+// ===========================
+// Alibi Generator
+// ===========================
+const ALIBIS = [
+  "Я просто прийшов(ла) за кавою… і випадково опинився(лась) тут ☕",
+  "Я мовчав(ла), бо аналізував(ла), а не тому що я мафія.",
+  "Мене підставили. Я занадто красивий(а), щоб бути мафією 😎",
+  "Я голосував(ла) логічно. Якщо це злочин — арештовуйте.",
+  "Я просто спостерігав(ла). Місто потребує м
+
+
     // =========================
     // Instagram tiles
     // =========================
