Extracted css styles

--- a/index.html
+++ b/index.html
@@ -6,360 +6,7 @@
   <title>Мафія Киль · Mafia Kiel</title>
   <meta name="description" content="Класична мафія щоп’ятниці в Кілі. Анонси, реєстрація, правила, турніри, рейтинг, фото/відео." />
   <meta name="theme-color" content="#07080b" />
-
-  <style>
-    :root{
-      --bg:#06070a;
-      --bg2:#0b0f18;
-      --card:rgba(255,255,255,.06);
-      --card2:rgba(255,255,255,.09);
-      --line:rgba(255,255,255,.12);
-      --text:rgba(255,255,255,.92);
-      --muted:rgba(255,255,255,.68);
-      --gold:#d8b25a;
-      --gold2:#f2d68a;
-      --red:#ff3b3b;
-      --r:18px;
-      --shadow:0 18px 60px rgba(0,0,0,.55);
-      --mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-      --sans: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Noto Sans", "Helvetica Neue", sans-serif;
-    }
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0; color:var(--text); font-family:var(--sans);
-      background:
-        radial-gradient(1200px 700px at 18% 0%, rgba(216,178,90,.13), transparent 60%),
-        radial-gradient(1000px 700px at 92% 25%, rgba(255,59,59,.10), transparent 55%),
-        radial-gradient(900px 600px at 40% 105%, rgba(216,178,90,.10), transparent 55%),
-        linear-gradient(180deg, var(--bg), var(--bg2));
-      overflow-x:hidden;
-    }
-    .grain{
-      pointer-events:none; position:fixed; inset:0; opacity:.13; mix-blend-mode:overlay;
-      background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='180' height='180'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.9' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='180' height='180' filter='url(%23n)' opacity='.55'/%3E%3C/svg%3E");
-      background-size:220px 220px;
-    }
-    .wrap{max-width:1180px; margin:0 auto; padding:22px 14px 70px;}
-
-    /* top */
-    .topbar{
-      display:flex; align-items:center; justify-content:space-between; gap:12px;
-      padding:8px 0 14px; flex-wrap:wrap;
-    }
-    .brand{display:flex; align-items:center; gap:12px; text-decoration:none; color:inherit;}
-    .logo{
-      width:46px; height:46px; border-radius:16px;
-      background:
-        radial-gradient(circle at 30% 30%, rgba(242,214,138,.34), transparent 55%),
-        linear-gradient(135deg, rgba(216,178,90,.24), rgba(255,255,255,.06));
-      border:1px solid rgba(216,178,90,.32);
-      box-shadow:0 10px 30px rgba(0,0,0,.35);
-      display:grid; place-items:center;
-      font-weight:900; letter-spacing:.10em;
-      color:var(--gold2);
-      font-family:var(--mono);
-    }
-    .brand h1{margin:0; font-size:15.5px; letter-spacing:.02em}
-    .brand p{margin:2px 0 0; font-size:12.5px; color:var(--muted)}
-
-    .pillrow{display:flex; gap:10px; flex-wrap:wrap; justify-content:flex-end}
-    .pill{
-      font-size:12px; padding:8px 10px; border-radius:999px;
-      background:rgba(255,255,255,.06);
-      border:1px solid rgba(255,255,255,.12);
-      color:var(--muted);
-      display:inline-flex; gap:8px; align-items:center;
-    }
-    .dot{width:7px;height:7px;border-radius:999px;background:var(--gold); box-shadow:0 0 14px rgba(216,178,90,.35)}
-    .dot.red{background:var(--red); box-shadow:0 0 14px rgba(255,59,59,.35)}
-
-    /* HERO */
-    .hero{
-      border-radius:calc(var(--r) + 10px);
-      background:linear-gradient(180deg, rgba(255,255,255,.08), rgba(255,255,255,.04));
-      border:1px solid rgba(255,255,255,.12);
-      box-shadow:var(--shadow);
-      overflow:hidden;
-      position:relative;
-      padding:22px;
-      isolation:isolate;
-    }
-    .hero:before{
-      content:""; position:absolute; inset:-2px;
-      background:
-        radial-gradient(520px 260px at 18% 30%, rgba(216,178,90,.22), transparent 70%),
-        radial-gradient(740px 360px at 82% 45%, rgba(255,59,59,.18), transparent 70%);
-      filter:blur(7px);
-      opacity:.95;
-      pointer-events:none;
-      z-index:-1;
-    }
-    .laser{
-      position:absolute; top:-40px; right:-30px;
-      width:340px; height:520px;
-      background:
-        linear-gradient(90deg, rgba(255,59,59,0), rgba(255,59,59,.35), rgba(255,59,59,0)),
-        repeating-linear-gradient(
-          0deg,
-          rgba(255,59,59,.0) 0px,
-          rgba(255,59,59,.0) 10px,
-          rgba(255,59,59,.28) 12px,
-          rgba(255,59,59,.0) 22px
-        );
-      opacity:.85;
-      transform:rotate(8deg);
-      mask-image:radial-gradient(circle at 30% 50%, rgba(0,0,0,1), rgba(0,0,0,0) 70%);
-      pointer-events:none;
-      z-index:0;
-    }
-    .spark{
-      position:absolute; right:72px; top:128px;
-      width:120px; height:120px; border-radius:999px;
-      background:
-        radial-gradient(circle at 50% 50%, rgba(255,255,255,.9), rgba(255,255,255,0) 55%),
-        radial-gradient(circle at 55% 55%, rgba(255,59,59,.45), rgba(255,59,59,0) 60%);
-      opacity:.85;
-      pointer-events:none;
-      z-index:1;
-    }
-    .heroGrid{
-      display:grid;
-      grid-template-columns: 1.2fr .8fr;
-      gap:16px;
-      align-items:stretch;
-      position:relative;
-      z-index:2;
-    }
-    @media (max-width: 980px){
-      .heroGrid{grid-template-columns:1fr}
-    }
-    .heroRight{display:flex; align-items:center; justify-content:flex-end}
-    @media (max-width:980px){ .heroRight{justify-content:flex-start} }
-
-    .phone{
-      width:min(360px, 100%);
-      border-radius:26px;
-      background:rgba(0,0,0,.28);
-      border:1px solid rgba(255,255,255,.12);
-      box-shadow:0 18px 60px rgba(0,0,0,.55);
-      overflow:hidden;
-      position:relative;
-    }
-    .phoneTop{
-      display:flex; align-items:center; justify-content:space-between;
-      padding:12px 12px;
-      border-bottom:1px solid rgba(255,255,255,.10);
-      background:rgba(0,0,0,.22);
-    }
-    .phoneTop b{font-size:12.5px; color:rgba(255,255,255,.88)}
-    .phoneTop span{font-size:12px; color:var(--muted); font-family:var(--mono); letter-spacing:.08em}
-    .phoneBody{padding:12px}
-
-    .kicker{
-      display:inline-flex; align-items:center; gap:10px;
-      font-family:var(--mono);
-      letter-spacing:.14em;
-      text-transform:uppercase;
-      font-size:12px;
-      color:rgba(255,255,255,.78);
-    }
-    .kicker .mark{width:34px; height:1px; background:rgba(216,178,90,.80); box-shadow:0 0 18px rgba(216,178,90,.35);}
-    .hero h2{
-      margin:12px 0 10px;
-      font-size:38px; line-height:1.02; letter-spacing:-.03em;
-      text-transform:uppercase;
-    }
-    .hero h2 span{
-      background:linear-gradient(90deg, var(--gold2), #fff);
-      -webkit-background-clip:text; background-clip:text; color:transparent;
-    }
-    .hero p{
-      margin:0;
-      color:rgba(255,255,255,.80);
-      max-width:78ch;
-      font-size:15px;
-      line-height:1.6;
-    }
-
-    .ctas{display:flex; gap:10px; flex-wrap:wrap; margin-top:16px}
-    .btn{
-      appearance:none; border:none; cursor:pointer;
-      padding:12px 14px; border-radius:14px;
-      color:var(--text);
-      background:rgba(255,255,255,.07);
-      border:1px solid rgba(255,255,255,.14);
-      text-decoration:none;
-      display:inline-flex; gap:10px; align-items:center;
-      transition:transform .10s ease, background .10s ease, border-color .10s ease;
-      font-size:14px;
-      user-select:none;
-    }
-    .btn:hover{transform:translateY(-1px); background:rgba(255,255,255,.10); border-color:rgba(255,255,255,.22)}
-    .btn.primary{
-      background:linear-gradient(135deg, rgba(216,178,90,.30), rgba(255,255,255,.08));
-      border-color:rgba(216,178,90,.38);
-    }
-    .btn.red{
-      background:linear-gradient(135deg, rgba(255,59,59,.22), rgba(255,255,255,.06));
-      border-color:rgba(255,59,59,.35);
-    }
-    .btn.red:hover{
-      background:linear-gradient(135deg, rgba(255,59,59,.28), rgba(255,255,255,.08));
-    }
-    .mini{padding:10px 12px;border-radius:12px;font-size:13px}
-
-    .chips{display:flex; gap:8px; flex-wrap:wrap; margin-top:12px}
-    .chip{
-      display:inline-flex; gap:8px; align-items:center;
-      border:1px solid rgba(255,255,255,.12);
-      background:rgba(0,0,0,.20);
-      padding:7px 10px; border-radius:999px;
-      font-size:12.5px; color:rgba(255,255,255,.78);
-    }
-    .chip b{color:rgba(255,255,255,.92)}
-    .chip .c{width:7px;height:7px;border-radius:999px;background:var(--gold)}
-    .chip .c.red{background:var(--red)}
-
-    /* layout */
-    .grid{margin-top:14px; display:grid; grid-template-columns: 1.25fr .75fr; gap:12px;}
-    @media (max-width: 980px){ .grid{grid-template-columns:1fr} }
-    .card{
-      border-radius:var(--r);
-      background:rgba(255,255,255,.06);
-      border:1px solid rgba(255,255,255,.12);
-      box-shadow:0 14px 40px rgba(0,0,0,.35);
-      padding:16px;
-    }
-    .card h3{margin:0 0 10px; font-size:16px;}
-    .sub{color:var(--muted); font-size:13px; line-height:1.55; margin:0 0 12px;}
-
-    /* events */
-    .events{display:grid; gap:10px}
-    .event{
-      padding:14px;
-      border-radius:16px;
-      background:rgba(0,0,0,.22);
-      border:1px solid rgba(255,255,255,.10);
-      display:grid;
-      grid-template-columns: 1fr auto;
-      gap:10px;
-      align-items:center;
-    }
-    .event strong{font-size:14px}
-    .event .meta{margin-top:6px; color:var(--muted); font-size:12.5px; line-height:1.45}
-    .badge{
-      display:inline-flex; align-items:center; gap:8px;
-      font-family:var(--mono); font-size:11px; letter-spacing:.12em; text-transform:uppercase;
-      color:rgba(255,255,255,.82);
-      border:1px solid rgba(216,178,90,.34);
-      background:rgba(216,178,90,.10);
-      padding:8px 10px; border-radius:999px; white-space:nowrap;
-    }
-    .badge.red{border-color:rgba(255,59,59,.40); background:rgba(255,59,59,.10)}
-    .event .actions{display:flex; gap:8px; flex-wrap:wrap; justify-content:flex-end;}
-
-    /* countdown */
-    .countwrap{
-      display:grid; gap:10px;
-      padding:14px; border-radius:16px;
-      background:linear-gradient(180deg, rgba(255,255,255,.08), rgba(255,255,255,.05));
-      border:1px solid rgba(255,255,255,.12);
-    }
-    .counttitle{display:flex; justify-content:space-between; gap:10px; align-items:center}
-    .counttitle span{color:var(--muted); font-size:12.5px}
-    .count{display:flex; gap:10px; flex-wrap:wrap;}
-    .unit{
-      min-width:92px; padding:12px 12px; border-radius:14px;
-      background:rgba(0,0,0,.25); border:1px solid rgba(255,255,255,.10);
-    }
-    .num{font-size:20px; font-family:var(--mono); color:var(--gold2)}
-    .lbl{font-size:12px; color:var(--muted); margin-top:4px}
-
-    /* fun boxes */
-    .rolebox{
-      display:grid; gap:10px;
-      padding:14px; border-radius:16px;
-      background:rgba(0,0,0,.22);
-      border:1px solid rgba(255,255,255,.10);
-    }
-    .role{
-      font-family:var(--mono);
-      font-size:16px;
-      letter-spacing:.02em;
-      color:var(--gold2);
-      line-height:1.35;
-    }
-    .small{font-size:12.5px;color:var(--muted);line-height:1.5;margin:0}
-
-    /* sections */
-    .section{margin-top:12px}
-    .split{display:grid; grid-template-columns:1fr 1fr; gap:12px}
-    @media (max-width: 980px){ .split{grid-template-columns:1fr} }
-
-    /* hub */
-    .tabs{display:flex; gap:8px; flex-wrap:wrap; margin:10px 0 0}
-    .tab{
-      border:1px solid rgba(255,255,255,.12);
-      background:rgba(255,255,255,.06);
-      color:var(--muted);
-      border-radius:999px;
-      padding:8px 10px;
-      font-size:12.5px;
-      cursor:pointer;
-    }
-    .tab[aria-selected="true"]{
-      color:var(--text);
-      border-color:rgba(216,178,90,.35);
-      background:rgba(216,178,90,.10);
-    }
-    .panel{display:none}
-    .panel.active{display:block}
-
-    table{width:100%;border-collapse:collapse}
-    th,td{padding:10px 8px;border-bottom:1px solid rgba(255,255,255,.10);text-align:left;font-size:13.5px}
-    th{color:rgba(255,255,255,.78);font-family:var(--mono);font-size:12px;letter-spacing:.10em;text-transform:uppercase}
-    .pill2{
-      display:inline-flex;gap:8px;align-items:center;border:1px solid rgba(255,255,255,.12);
-      background:rgba(0,0,0,.22);padding:6px 10px;border-radius:999px;font-size:12px;color:var(--muted)
-    }
-
-    /* Instagram tiles */
-    .iggrid{display:grid; grid-template-columns:repeat(3, 1fr); gap:10px}
-    @media (max-width: 900px){.iggrid{grid-template-columns:repeat(2, 1fr)}}
-    @media (max-width: 520px){.iggrid{grid-template-columns:1fr}}
-    .igcard{
-      border-radius:16px;
-      overflow:hidden;
-      border:1px solid rgba(255,255,255,.12);
-      background:rgba(0,0,0,.25);
-      position:relative;
-    }
-    .igcard .top{
-      padding:10px 12px;
-      display:flex; justify-content:space-between; gap:10px; align-items:center;
-      border-bottom:1px solid rgba(255,255,255,.10);
-      background:rgba(0,0,0,.22);
-    }
-    .igcard .top b{font-size:12.5px; color:rgba(255,255,255,.86)}
-    .igcard .top span{font-size:12px; color:var(--muted)}
-    .igcard .body{padding:12px}
-
-    .igfallback{
-      padding:14px;
-      border-radius:12px;
-      background:rgba(255,255,255,.06);
-      border:1px solid rgba(255,255,255,.12);
-      color:rgba(255,255,255,.82);
-      font-size:13px;
-      line-height:1.55;
-    }
-    .yt{aspect-ratio:16/9;width:100%;border:0;border-radius:16px;background:#000}
-
-    footer{margin-top:16px;color:var(--muted);font-size:12.5px;line-height:1.6;text-align:center}
-    footer a{color:rgba(255,255,255,.78)}
-    .sep{opacity:.35; padding:0 8px}
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
