--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="wrap">
       <div class="topbar">
-        <a class="brand" href="#top" aria-label="Мафія Киль">
+        <a class="brand" href="#top" aria-label="Мафія Киль!">
           <div class="logo">K</div>
           <div>
             <h1>
