--- a/index.html
+++ b/index.html
@@ -1039,3 +1039,45 @@ END:VCALENDAR`;
     </script>
   </body>
 </html>
+<!-- Темний блок локиції -->
+<div class="mafia-noir-card">
+  <!-- Заголовок -->
+  <div class="noir-header">
+    <span class="noir-highlight">Тиша.</span>
+    <h2>МІСТО ЗАСИНАЄ.</h2>
+    <h3>АЛЕ МАФІЯ ПРОКИДАЄТЬСЯ</h3>
+  </div>
+
+  <!-- Адреса -->
+  <div class="noir-address">
+    <p>Твоя точка на карті:</p>
+    <strong>Brahmsweg 17, 24159 Kiel</strong>
+  </div>
+
+  <!-- Контейнер карти -->
+  <div class="noir-map-container">
+    <iframe
+      width="100%"
+      height="300"
+      frameborder="0"
+      style="border: 0"
+      allowfullscreen=""
+      loading="lazy"
+      src="https://maps.google.com/maps?q=Brahmsweg+17,+24159+Kiel&t=&z=15&ie=UTF8&iwloc=&output=embed"
+    >
+    </iframe>
+    <!--Темний шар поверх карти для стилізації -->
+    <div class="noir-overlay"></div>
+  </div>
+
+  <!-- Кнопка -->
+  <div class="noir-action">
+    <a
+      href="https://maps.google.com/?q=Brahmsweg+17+Kiel"
+      target="_blank"
+      class="noir-btn"
+    >
+      ПОМІЧЕНО НА КАРТІ
+    </a>
+  </div>
+</div>
