--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@ END:VCALENDAR`;
     <strong>Brahmsweg 17, 24159 Kiel</strong>
   </div>
 
-  <!-- Контейнер карти -->
+  <!-- Контейнер карти з персонажем -->
   <div class="noir-map-container">
     <iframe
       width="100%"
@@ -1066,8 +1066,12 @@ END:VCALENDAR`;
       src="https://maps.google.com/maps?q=Brahmsweg+17,+24159+Kiel&t=&z=15&ie=UTF8&iwloc=&output=embed"
     >
     </iframe>
-    <!--Темний шар поверх карти для стилізації -->
+
+    <!-- Темний шар -->
     <div class="noir-overlay"></div>
+
+    <!-- ПЕРСОНАЖ (Фішка на карті) -->
+    <div class="mafia-character-pin">🕴️</div>
   </div>
 
   <!-- Кнопка -->
